--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  qr_flutter:
+    git:
+      url: https://github.com/theyakka/qr.flutter.git
+
+  flutter_slidable: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
