--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
       url: https://github.com/theyakka/qr.flutter.git
 
   flutter_slidable: ^3.0.0
+  http: ^1.1.0
+  provider: ^6.0.5
+  pretty_http_logger:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
