--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   qr_flutter:
     git:
       url: https://github.com/theyakka/qr.flutter.git
@@ -40,6 +39,9 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   pretty_http_logger:
+  shared_preferences: ^2.0.10
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
