--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   provider: ^6.0.5
   pretty_http_logger:
   shared_preferences: ^2.0.10
-
+  fluttertoast:
 
 
   # The following adds the Cupertino Icons font to your application.
