--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
   flutter_svg: ^1.1.6
+  flutter_barcode_scanner: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
