--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.10
   fluttertoast:
   flutter_barcode_scanner:
+  geolocator: ^9.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
